# ArtEngine

./: .gitignore  LICENSE  README.md  zip_project.bat
ArtEngine/: CMakeLists.txt
ArtEngine/examples/bvh/: bounding_volume_hierarchy.cpp  bounding_volume_hierarchy.h  helpers.cpp  helpers.h  main.cpp
ArtEngine/examples/bvh/shader/: default.fs  default.vs
ArtEngine/examples/colliding_balls/: main.cpp
ArtEngine/examples/colliding_balls/shader/: particle.fs
ArtEngine/examples/cubic_spline/: cubic_spline.h  main.cpp  settings.h
ArtEngine/examples/cubic_spline/shader/: default.fs
ArtEngine/examples/empty/: main.cpp
ArtEngine/examples/image/: main.cpp
ArtEngine/examples/image/shader/: effect.fs  effect.vs
ArtEngine/examples/scene/: main.cpp  model.h  settings.h
ArtEngine/examples/scene/object/: models.txt
ArtEngine/examples/scene/shader/: default.fs
ArtEngine/examples/space_partitioning/: bsp_tree.cpp  bsp_tree.h  helpers.cpp  helpers.h  main.cpp  octree.cpp  octree.h
ArtEngine/examples/space_partitioning/shader/: default.fs
ArtEngine/examples/sphere_voronoi/: main.cpp
ArtEngine/examples/sphere_voronoi/shader/: cubevoronoi.fs  cubevoronoi.gs  cubevoronoi.vs  sphere.fs  sphere.vs
ArtEngine/examples/voronoi/: main.cpp  model.h
ArtEngine/include/: ArtEngine.cpp  ArtEngine.h  event.cpp  event.h  pch.h  view.cpp  view.h
ArtEngine/include/helpers/: camera.cpp  camera.h  color.cpp  color.h  image.cpp  image.h  log.cpp  log.h  object.cpp  object.h  parse.cpp  parse.h  timer.h
ArtEngine/include/utility/: bounding_volume.cpp  bounding_volume.h  buffer.cpp  buffer.h  instance.cpp  instance.h  model.cpp  model.h  shader.cpp  shader.h  target.cpp  target.h  texture.cpp  texture.h
Release/: imgui.ini
Release/shader/: default.vs
